Thu Jul 10 03:40:53 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/protocols/small/gadu-gadu.png:
	* data/images/protocols/small/jabber.c:
	* data/images/protocols/small/trepia.png:
	  - Added more protocol icons.

Thu Jul 10 01:07:45 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Put the .desktop file in the right directory.

Thu Jul 10 00:45:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* gaim.pro:
	  - Removed the paths specific to my setup for linking.

Wed Jul 09 16:43:04 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Fixed up the ipk building script.

Wed Jul 09 16:34:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	* mkstuff.conf:
	* mktarball.sh:
	  - Added utility scripts to produce an ipkg and tarball.

Wed Jul 02 12:14:50 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Added a toolbar to the buddy list window.

Mon Jun 30 03:16:31 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The conversations window now has a (non-working) menubar and
	    partially working window switching toolbar.

Thu Jun 26 18:13:21 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Protocol icons are now shown in the buddy list.

Thu Jun 26 17:32:58 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - We no longer show the branches in buddy groups. Unfortunately, the
	    top level still shows them. Not sure what to do there.

Thu Jun 26 17:14:27 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - Changed the connect button and added a disconnect button.
